--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <div class='right-btn'>
           <%= current_user.nickname %>の日記
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :logout %>
-          <%= link_to "日記作成", "#", class: :header_btn %>
+          <%= link_to "日記作成", new_diary_path, class: :header_btn %>
         </div>
       <% else %>
         <div class='right-btn'>
