--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -23,26 +23,39 @@ a {
 
 /* メインエリア */
 
-/* .main-area {
-  width: calc(100vw - calc(100vw - 100%));
+.main-wrapper {
+  display: flex;
   height: calc(100vh - 60px);
+  overflow-y: hidden;
 }
 
-.meeting-list {
+.point-area {
+  width: 200px;
+  background-color: seagreen;
+  height: 100vh;
+}
+
+.diary-area {
+  width: calc(100vw - calc(100vw - 100%) - 200px);
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.all-diary {
   display: flex;
   flex-wrap: wrap;
 }
 
 .list {
   font-size: 20px;
-  height: 170px;
-  width: 450px;
+  height: 120px;
+  width: 380px;
   border: 5px outset blue;
   border-radius: 20px;
   padding: 20px;
   margin: 10px;
   overflow: hidden;
-} */
+}
 
 /* showエリア */
 
