--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -33,6 +33,13 @@ a {
   width: 200px;
   background-color: rgb(54, 143, 92);
   height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.tree-images {
+  position: absolute;
+  bottom: 0px;
 }
 
 .diary-area {
