--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,5 +1,6 @@
 <div class='main-wrapper'>
   <div class='point-area'>
+    <%= render 'tree' %>
   </div>
   <div class='diary-area'>
     <ul class='all-diary'>
