--- a/app/views/diaries/_tree.html.erb
+++ b/app/views/diaries/_tree.html.erb
@@ -1,11 +1,23 @@
-<%# ユーザーのポイント合計値 %>
-<%= @point %>
-  <div class='tree-images'>
-    <% if @point > 200 %>
-      <%= image_tag '/images/tree_seichou10.png' %>
-    <% elsif @point > 100 %>
-      <%= image_tag '/images/tree_seichou01.png' %>
-    <% else %>
-      <%= image_tag '/images/tree_seichou01.png' %>
-    <% end %>
-  </div>
+<div class='tree-images'>
+  <% if @point > 10000000 %>
+    <%= image_tag '/images/tree_seichou10.png', class: 'tree-image' %>
+  <% elsif @point > 5000000  %>
+    <%= image_tag '/images/tree_seichou09.png', class: 'tree-image' %>
+  <% elsif @point > 1000000 %>
+    <%= image_tag '/images/tree_seichou08.png', class: 'tree-image' %>
+  <% elsif @point > 500000 %>
+    <%= image_tag '/images/tree_seichou07.png', class: 'tree-image' %>
+  <% elsif @point > 100000 %>
+    <%= image_tag '/images/tree_seichou06.png', class: 'tree-image' %>
+  <% elsif @point > 50000 %>
+    <%= image_tag '/images/tree_seichou05.png', class: 'tree-image' %>
+  <% elsif @point > 10000 %>
+    <%= image_tag '/images/tree_seichou04.png', class: 'tree-image' %>
+  <% elsif @point > 2000 %>
+    <%= image_tag '/images/tree_seichou03.png', class: 'tree-image' %>
+  <% elsif @point > 500 %>
+    <%= image_tag '/images/tree_seichou02.png', class: 'tree-image' %>
+  <% else  %>
+    <%= image_tag '/images/tree_seichou01.png', class: 'tree-image' %>
+  <% end %>
+</div>
