--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,5 +1,7 @@
 <div class='main-wrapper'>
   <div class='point-area'>
+    <%# ユーザーのポイント合計値 %>
+    <%= @point %>
     <%= render 'tree' %>
   </div>
   <div class='diary-area'>
