--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -63,12 +63,19 @@ a {
   font-size: 20px;
   height: 120px;
   width: 380px;
-  border: 5px outset blue;
-  border-radius: 20px;
   padding: 20px;
-  margin: 10px;
+  margin: 12px;
   overflow: hidden;
+  box-shadow: 15px 15px 20px -6px rgba(0,0,0,0.6);
 }
+
+.diary-date, .diary-title {
+  padding-left: 20px;
+  padding-right: 50px;
+}
+
+
+
 
 /* showエリア */
 
