日記詳細画面完了

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,3 +8,8 @@
   background-image: image-url('bookmark1.png');
   background-size: cover;
 }
+
+.show-page {
+  background-image: image-url('wood_m.jpg');
+}
+
