--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,10 +1,10 @@
 <div class='show-page'>
-  <div class='show-window'>
-    <div class='show-title'>
-      <%= @diary.title %>
-    </div>
-    <div class='show-text'>
-      <%= @diary.text %>
+  <div class='show-book'>
+    <div class='show-window'>
+      <div class='show-text'><%= @diary.title %>
+      </div>
+      <div class='show-text'><%= @diary.text %>
+      </div>
     </div>
   </div>
 </div>
