--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,3 +1,4 @@
+<%= render '/shared/header' %>
 <%= form_with model: @diary_point, url: diaries_path, method: :post, id: "diary-form", local: true do |f| %>
   <%= render "shared/error_messages", model: f.object %>
 
