--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -33,8 +33,8 @@
             日記を書きましょう<br /><br />
           </div>
           <%= link_to "新規登録", new_user_registration_path, class: :header_btn %><br /><br />
-          <div class='registration-btn'> 登録済の方はこちら</div>
 
+          <div class='registration-btn'> 登録済みの方はこちら</div>
           <%= link_to "ログイン", new_user_session_path, class: :header_btn %>
 
         </div>
