--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,3 +19,10 @@
   height: calc(100vh - 60px);
   width: 100vw;
 }
+
+.devise-back {
+  background-image: image-url('wood_m.jpg');
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
