--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,7 +16,7 @@
 .landing-page {
   background-image: image-url('book.jpg');
   background-size: cover;
-  height: calc(100vh - 60px);
+  height: 100vh;
   width: 100vw;
 }
 
