--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -9,13 +9,13 @@ a {
   color: black;
 }
 
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   height: 60px;
   width: calc(100vw - calc(100vw - 100%));
   background-color: #fff8dc;
-}
+} */
 
 .error-text {
   color: red;
@@ -47,27 +47,39 @@ a {
 
 .main-wrapper {
   display: flex;
-  height: calc(100vh - 60px);
+  height: 100vh;
   overflow-y: hidden;
 }
 
-.point-area {
+.index-side-bar {
   width: 200px;
   background-color: #c7fdc7;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  border: green 10px solid;
+  flex-flow: column;
+  padding-left: 20px;
 }
 
-.tree-images {
-  position: absolute;
-  bottom: 0px;
+.side-name {
+  font-size: 20px;
 }
 
-.tree-image {
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
+.side-point {
+  font-size: 20px;
+}
+
+.game_page {
+  font-size: 20px;
+}
+
+.new_diary {
+  font-size: 20px;
+}
+
+.logout {
+  font-size: 20px;
 }
 
 .diary-area {
@@ -107,7 +119,7 @@ a {
 .top-message {
   font-size: 30px;
   font-weight: bold;
-  margin-left: 10px;
+  margin-left: 30px;
 }
 
 .registration-btn {
@@ -119,14 +131,14 @@ a {
 /* showページ */
 
 .show-page {
-  height: calc(100vh - 60px);
+  height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
 }
 
 .show-book {
-  margin: 20px;
+  margin: 20px 20px 100px 20px;
   padding: 0 30px 50px 30px;
 }
 
@@ -135,11 +147,12 @@ a {
   overflow-y: scroll;
   height: calc(100% - 20px);
   width: calc(100% - 20px);
+  min-width: 80vw;
   color: #696969;
   margin: 2em 0;
   font-weight: bold;
   border: solid 1px #e6e6e6;
-  padding: 0.3em 1em 2em 1em;
+  padding: 0.3em 1em 1em 1em;
   box-shadow:2px 2px 0 rgba(0,0,0,.1);
 }
 
@@ -151,4 +164,15 @@ a {
   background-size: 100% 2em;
   line-height: 2em;
   padding: 2em 1em 0.2em 1em;
+}
+
+.return_toppage {
+  width: 120px;
+  background: #e4e5e6;
+  text-align: center;
+  border-radius: 4%;
+  bottom: 32px;
+  right: 32px;
+  position: fixed;
+  padding: 15px;
 }
