--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,4 +1,3 @@
-<%= render '/shared/header' %>
 <div class='show-page'>
   <div class='show-book'>
     <div class='show-window'>
@@ -8,4 +7,5 @@
       </div>
     </div>
   </div>
+  <%= link_to "一覧に戻る", root_path, class: :return_toppage %>
 </div>
