日記投稿画面完成

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,3 +26,10 @@
   height: 100vh;
   width: 100vw;
 }
+
+.new-diary-back {
+  background-image: image-url('wood_m.jpg');
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
