--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -11,7 +11,7 @@
       <%= @point %>pt
       </div>
       <%= link_to "育成する", '#', class: :game_page %>
-      <%= link_to "日記作成", new_diary_path, class: :new_diary %>
+      <%= link_to "日記作成", new_diary_path, class: :new_diary_btn %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :logout %>
     </div>
 
