--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,7 +1,7 @@
 <div class='main-wrapper'>
   <% if user_signed_in?%>
 
-    <div class='index-side-bar'>
+    <div class='diary-side-bar'>
       <%# ユーザーのポイント合計値 %>
       <div class='side-name'>
         <%= current_user.nickname %>の日記
