提出用　ゲーム未実装

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -211,3 +211,36 @@ textarea.note{
   position: fixed;
   padding: 15px;
 }
+
+/* pointページ */
+
+.point-side-bar {
+  width: 200px;
+  background-color: #fff8dc;
+  height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  border: brown 10px solid;
+  flex-flow: column;
+  padding-left: 20px;
+}
+
+.point-page-wrapper {
+  display: flex;
+  height: 100vh;
+  overflow-y: hidden;
+}
+
+.point-area {
+  width: calc(100vw - calc(100vw - 100%) - 200px);
+  height: 100%;
+  overflow-y: scroll;
+  background-color: burlywood;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feed-btn {
+  font-size: 20px;
+}
