--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -10,7 +10,7 @@
       所持ポイント<br />
       <%= @point %>pt
       </div>
-      <%= link_to "育成する", points_path, class: :game_page %>
+      <%= link_to "ゲームページへ", points_path, class: :game_page %>
       <%= link_to "日記作成", new_diary_path, class: :new_diary_btn %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: :logout %>
     </div>
