タイトル修正

--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -36,7 +36,7 @@
     <% else %>
       <div class='landing-page'>
         <div class='top-message'>
-          ゲーム日記(仮)<br /><br />
+          ゲームダイアリー<br /><br />
           <div class='site-message'>
             毎日楽しみながら<br />
             日記を書きましょう<br /><br />
