--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -33,3 +33,10 @@
   height: 100vh;
   width: 100vw;
 }
+
+.how_to_use-main {
+  background-image: image-url('wood_m.jpg');
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
