--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -63,6 +63,10 @@ a {
 }
 
 .side-name {
+  font-size: 100%;
+}
+
+.use_name {
   font-size: 20px;
 }
 
@@ -148,6 +152,7 @@ a {
   height: calc(100% - 20px);
   width: calc(100% - 20px);
   min-width: 80vw;
+  max-width: 90vw;
   color: #696969;
   margin: 2em 0;
   font-weight: bold;
@@ -243,4 +248,33 @@ textarea.note{
 
 .feed-btn {
   font-size: 20px;
+}
+
+/* .how_to_useページ */
+
+.how_to_use-main {
+  display: flex;
+  overflow-y: scroll;
+  width: calc(100vw - calc(100vw - 100%));
+  height: 100vh;
+}
+
+.how_to_use {
+  font-size: 25px;
+  font-weight: bold;
+  margin-left: 30px;
+}
+
+.how_to_use_image {
+  width: 450px;
+}
+
+.how_tu_use-window {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.how_to_use-list {
+  padding: 20px;
+  margin: 12px;
 }
