--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -9,17 +9,14 @@ a {
   color: black;
 }
 
-/* .header {
-  display: flex;
-  justify-content: space-between;
-  height: 60px;
-  width: calc(100vw - calc(100vw - 100%));
-  background-color: #fff8dc;
-} */
-
 .error-text {
   color: red;
 }
+
+.notice, .alert {
+  color: red;
+}
+
 
 /* devise */
 .devise-back {
